fix(i18n): remove count interpolation from tool labels
The count values were moved outside the translated strings to simplify localization and improve consistency across languages. The counts are now displayed separately after the translated labels in the UI.

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -160,10 +160,10 @@
             }
           },
           "review": {
-            "autoTools": "Auto: {{count}}",
-            "customTools": "Custom: {{count}}",
+            "autoTools": "Auto",
+            "customTools": "Custom",
             "helper": "Changes save automatically. Adjust the steps above any time to fine-tune permissions.",
-            "mcp": "MCP: {{count}}",
+            "mcp": "MCP",
             "mode": "Mode: {{mode}}"
           },
           "steps": {
