--- a/src/renderer/src/i18n/translate/el-gr.json
+++ b/src/renderer/src/i18n/translate/el-gr.json
@@ -160,10 +160,10 @@
             }
           },
           "review": {
-            "autoTools": "Αυτόματο: {{count}}",
-            "customTools": "Προσαρμοσμένο: {{count}}",
+            "autoTools": "Αυτόματο",
+            "customTools": "Προσαρμοσμένο",
             "helper": "Οι αλλαγές αποθηκεύονται αυτόματα. Προσαρμόστε τα παραπάνω βήματα ανά πάσα στιγμή για να εξειδικεύσετε τα δικαιώματα.",
-            "mcp": "MCP: {{count}}",
+            "mcp": "MCP",
             "mode": "Λειτουργία: {{mode}}"
           },
           "steps": {
