--- a/src/renderer/src/i18n/translate/ru-ru.json
+++ b/src/renderer/src/i18n/translate/ru-ru.json
@@ -160,10 +160,10 @@
             }
           },
           "review": {
-            "autoTools": "Авто: {{count}}",
-            "customTools": "Пользовательские: {{count}}",
+            "autoTools": "Авто",
+            "customTools": "Пользовательские",
             "helper": "Изменения сохраняются автоматически. В любое время можно скорректировать шаги выше, чтобы уточнить разрешения.",
-            "mcp": "MCP: {{count}}",
+            "mcp": "MCP",
             "mode": "Режим: {{mode}}"
           },
           "steps": {
