--- a/src/renderer/src/i18n/translate/es-es.json
+++ b/src/renderer/src/i18n/translate/es-es.json
@@ -160,10 +160,10 @@
             }
           },
           "review": {
-            "autoTools": "Auto: {{count}}",
-            "customTools": "Personalizado: {{count}}",
+            "autoTools": "Auto",
+            "customTools": "Personalizado",
             "helper": "Los cambios se guardan automáticamente. Ajusta los pasos anteriores en cualquier momento para afinar los permisos.",
-            "mcp": "MCP: {{count}}",
+            "mcp": "MCP",
             "mode": "Modo: {{mode}}"
           },
           "steps": {
