feat(i18n): update translation files and add missing plural forms
- Update README to clarify translation maintenance status
- Add missing plural forms in en-us, zh-cn, and zh-tw locales
- Complete machine translations for de-de, ja-jp, ru-ru, pt-pt, es-es, fr-fr, and el-gr
- Convert array to object format for accessibility description in de-de and zh-cn

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -1574,6 +1574,7 @@
       },
       "delete": {
         "confirm": {
+          "content": "Are you sure you want to delete the selected {{count}} message(s)?",
           "content_one": "Are you sure you want to delete the selected {{count}} message?",
           "content_other": "Are you sure you want to delete the selected {{count}} messages?",
           "title": "Delete Confirmation"
@@ -3242,6 +3243,7 @@
               "selected_one": "Delete Selected",
               "selected_other": "Delete Selected {{count}}",
               "success": {
+                "multiple": "Successfully deleted {{count}} backup file(s)",
                 "multiple_one": "Successfully deleted {{count}} backup file",
                 "multiple_other": "Successfully deleted {{count}} backup files",
                 "single": "Backup file deleted successfully"
