--- a/src/renderer/src/i18n/translate/ja-jp.json
+++ b/src/renderer/src/i18n/translate/ja-jp.json
@@ -539,7 +539,7 @@
           "context": "コンテキストをクリア {{Command}}"
         },
         "new_topic": "新しいトピック {{Command}}",
-        "paste_text_file_confirm": "[to be translated]:粘贴到输入框？",
+        "paste_text_file_confirm": "入力ボックスに貼り付けますか？",
         "pause": "一時停止",
         "placeholder": "ここにメッセージを入力し、{{key}} を押して送信...",
         "placeholder_without_triggers": "ここにメッセージを入力し、{{key}} を押して送信...",
@@ -1963,12 +1963,12 @@
       "rename_changed": "セキュリティポリシーにより、ファイル名は{{original}}から{{final}}に変更されました",
       "save": "メモに保存する",
       "search": {
-        "both": "[to be translated]:名称+内容",
-        "content": "[to be translated]:内容",
-        "found_results": "[to be translated]:找到 {{count}} 个结果 (名称: {{nameCount}}, 内容: {{contentCount}})",
-        "more_matches": "[to be translated]:个匹配",
-        "searching": "[to be translated]:搜索中...",
-        "show_less": "[to be translated]:收起"
+        "both": "名称+内容",
+        "content": "内容",
+        "found_results": "{{count}} 件の結果が見つかりました（名前: {{nameCount}}、内容: {{contentCount}}）",
+        "more_matches": "個の一致",
+        "searching": "検索中...",
+        "show_less": "閉じる"
       },
       "settings": {
         "data": {
@@ -2118,8 +2118,8 @@
         "install_code_103": "OVMSランタイムのダウンロードに失敗しました",
         "install_code_104": "OVMSランタイムの解凍に失敗しました",
         "install_code_105": "OVMSランタイムのクリーンアップに失敗しました",
-        "install_code_106": "[to be translated]:创建 run.bat 失败",
-        "install_code_110": "[to be translated]:清理旧 OVMS runtime 失败",
+        "install_code_106": "run.bat の作成に失敗しました",
+        "install_code_110": "旧 OVMS ランタイムのクリーンアップに失敗しました",
         "run": "OVMSの実行に失敗しました:",
         "stop": "OVMSの停止に失敗しました:"
       },
@@ -4231,7 +4231,7 @@
           "system": "システムプロキシ",
           "title": "プロキシモード"
         },
-        "tip": "[to be translated]:支持模糊匹配(*.test.com,192.168.0.0/16)"
+        "tip": "ワイルドカードマッチング（*.test.com、192.168.0.0/16）をサポート"
       },
       "quickAssistant": {
         "click_tray_to_show": "トレイアイコンをクリックして起動",
