--- a/src/renderer/src/i18n/translate/pt-pt.json
+++ b/src/renderer/src/i18n/translate/pt-pt.json
@@ -539,7 +539,7 @@
           "context": "Limpar contexto {{Command}}"
         },
         "new_topic": "Novo tópico {{Command}}",
-        "paste_text_file_confirm": "[to be translated]:粘贴到输入框？",
+        "paste_text_file_confirm": "Colar na caixa de entrada?",
         "pause": "Pausar",
         "placeholder": "Digite sua mensagem aqui...",
         "placeholder_without_triggers": "Escreve a tua mensagem aqui, pressiona {{key}} para enviar",
@@ -1963,12 +1963,12 @@
       "rename_changed": "Devido às políticas de segurança, o nome do arquivo foi alterado de {{original}} para {{final}}",
       "save": "salvar em notas",
       "search": {
-        "both": "[to be translated]:名称+内容",
-        "content": "[to be translated]:内容",
-        "found_results": "[to be translated]:找到 {{count}} 个结果 (名称: {{nameCount}}, 内容: {{contentCount}})",
-        "more_matches": "[to be translated]:个匹配",
-        "searching": "[to be translated]:搜索中...",
-        "show_less": "[to be translated]:收起"
+        "both": "Nome + conteúdo",
+        "content": "conteúdo",
+        "found_results": "Encontrado {{count}} resultado(s) (nome: {{nameCount}}, conteúdo: {{contentCount}})",
+        "more_matches": "uma correspondência",
+        "searching": "Pesquisando...",
+        "show_less": "recolher"
       },
       "settings": {
         "data": {
@@ -2118,8 +2118,8 @@
         "install_code_103": "Falha ao baixar o tempo de execução do OVMS",
         "install_code_104": "Falha ao descompactar o tempo de execução do OVMS",
         "install_code_105": "Falha ao limpar o tempo de execução do OVMS",
-        "install_code_106": "[to be translated]:创建 run.bat 失败",
-        "install_code_110": "[to be translated]:清理旧 OVMS runtime 失败",
+        "install_code_106": "Falha ao criar run.bat",
+        "install_code_110": "Falha ao limpar o tempo de execução antigo do OVMS",
         "run": "Falha ao executar o OVMS:",
         "stop": "Falha ao parar o OVMS:"
       },
@@ -4231,7 +4231,7 @@
           "system": "Proxy do Sistema",
           "title": "Modo de Proxy"
         },
-        "tip": "[to be translated]:支持模糊匹配(*.test.com,192.168.0.0/16)"
+        "tip": "Suporta correspondência difusa (*.test.com, 192.168.0.0/16)"
       },
       "quickAssistant": {
         "click_tray_to_show": "Clique no ícone da bandeja para iniciar",
