Upgrade TipTap to v3.7.2 and add text highlight feature
- Update all TipTap packages from v3.2.0 to v3.7.2 including core extensions and dependencies
- Add new highlight extension with Markdown support using ==text== syntax
- Replace custom markdown converter with TipTap's built-in Markdown extension
- Simplify link handling by using standard TipTap link extension instead of enhancedLink
- Add view menu to app menu service for better Electron app navigation

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -2599,6 +2599,7 @@
       "heading4": "Heading 4",
       "heading5": "Heading 5",
       "heading6": "Heading 6",
+      "highlight": "Highlight",
       "image": "Image",
       "inlineMath": "Inline Equation",
       "italic": "Italic",
