--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -2599,6 +2599,7 @@
       "heading4": "四级标题",
       "heading5": "五级标题",
       "heading6": "六级标题",
+      "hightlight": "高亮",
       "image": "图片",
       "inlineMath": "行内数学公式",
       "italic": "斜体",
