refactor(provider): change hide disabled providers to show disabled providers
Update the provider settings to use a more intuitive "show disabled" toggle instead of "hide disabled". This includes updating the preference schema, default value, and UI components to reflect this change.

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -4178,7 +4178,7 @@
       "get_api_key": "Get API Key",
       "list": {
         "settings": {
-          "hide_disabled": "Hide disabled providers"
+          "show_disabled": "Show disabled providers"
         }
       },
       "misc": "Other",
