--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -1013,6 +1013,7 @@
     "name": "Name",
     "no_results": "No results",
     "none": "None",
+    "off": "Off",
     "open": "Open",
     "paste": "Paste",
     "placeholders": {
@@ -3985,7 +3986,6 @@
         "default": "default",
         "flex": "flex",
         "on_demand": "on demand",
-        "performance": "performance",
         "priority": "priority",
         "tip": "Specifies the latency tier to use for processing the request",
         "title": "Service Tier"
@@ -4004,7 +4004,7 @@
         "low": "Low",
         "medium": "Medium",
         "tip": "Control the level of detail in the model's output",
-        "title": "Level of detail"
+        "title": "Verbosity"
       }
     },
     "privacy": {
